// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationAdminPage /> renders correctly 1`] = `
<div
  className="box-content"
>
  <div
    className="row"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="allow-registration"
        values={Object {}}
      />
    </Col>
  </div>
  <h4>
    <FormattedMessage
      id="social-medias"
      values={Object {}}
    />
  </h4>
  <p>
    <FormattedMessage
      id="allow-registration-with"
      values={Object {}}
    />
  </p>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Facebook
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Google
    </Col>
  </div>
  <h4>
    <FormattedMessage
      id="allow"
      values={Object {}}
    />
  </h4>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="limit-registration-to-some-domains"
        values={Object {}}
      />
    </Col>
  </div>
  <h4>
    <FormattedMessage
      id="received-data"
      values={Object {}}
    />
  </h4>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={true}
        disabled={true}
        icons={true}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="user.register.username.username"
        values={Object {}}
      />
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={true}
        disabled={true}
        icons={true}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="form.new_password"
        values={Object {}}
      />
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="user.register.zipcode"
        values={Object {}}
      />
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="registration.type"
        values={Object {}}
      />
    </Col>
  </div>
  <Well
    bsClass="div"
  >
    <p
      style={
        Object {
          "marginTop": 10,
        }
      }
    >
      <strong>
        <FormattedMessage
          id="more-fields"
          values={Object {}}
        />
      </strong>
    </p>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="box-content__toolbar"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <FormattedMessage
        id="link_action_create"
        values={Object {}}
      />
    </Button>
  </Well>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <p>
        <strong>
          <FormattedMessage
            id="registration.enable_consent_external_communication.title"
            values={Object {}}
          />
        </strong>
        <br />
        <FormattedMessage
          id="registration.enable_consent_external_communication.subtitle"
          values={
            Object {
              "link": <a
                className="external-link"
                href="http://localhost/admin/settings/settings.global/list"
              >
                <FormattedMessage
                  id="proposal.admin.general"
                  values={Object {}}
                />
              </a>,
            }
          }
        />
      </p>
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        disabled={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="i-am-not-a-bot"
        values={Object {}}
      />
    </Col>
  </div>
  <h3>
    <FormattedMessage
      id="communication"
      values={Object {}}
    />
  </h3>
  <Connect(ReduxForm) />
</div>
`;

exports[`<RegistrationAdminPage /> renders correctly when not super admin 1`] = `
<div
  className="box-content"
>
  <div
    className="row"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="allow-registration"
        values={Object {}}
      />
    </Col>
  </div>
  <h4>
    <FormattedMessage
      id="social-medias"
      values={Object {}}
    />
  </h4>
  <p>
    <FormattedMessage
      id="allow-registration-with"
      values={Object {}}
    />
  </p>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Facebook
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      Google
    </Col>
  </div>
  <h4>
    <FormattedMessage
      id="allow"
      values={Object {}}
    />
  </h4>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="limit-registration-to-some-domains"
        values={Object {}}
      />
    </Col>
  </div>
  <h4>
    <FormattedMessage
      id="received-data"
      values={Object {}}
    />
  </h4>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={true}
        disabled={true}
        icons={true}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="user.register.username.username"
        values={Object {}}
      />
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={true}
        disabled={true}
        icons={true}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="form.new_password"
        values={Object {}}
      />
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="user.register.zipcode"
        values={Object {}}
      />
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="registration.type"
        values={Object {}}
      />
    </Col>
  </div>
  <Well
    bsClass="well"
  >
    <p
      style={
        Object {
          "marginTop": 10,
        }
      }
    >
      <Alert
        bsClass="alert"
        bsStyle="info"
        closeLabel="Close alert"
      >
        Cette section est modifiable uniquement par votre administrateur cap-collectif.
      </Alert>
      <strong>
        <FormattedMessage
          id="more-fields"
          values={Object {}}
        />
      </strong>
    </p>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="default"
      className="box-content__toolbar"
      disabled={true}
      onClick={null}
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <FormattedMessage
        id="link_action_create"
        values={Object {}}
      />
    </Button>
  </Well>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <p>
        <strong>
          <FormattedMessage
            id="registration.enable_consent_external_communication.title"
            values={Object {}}
          />
        </strong>
        <br />
        <FormattedMessage
          id="registration.enable_consent_external_communication.subtitle"
          values={
            Object {
              "link": <a
                className="external-link"
                href="http://localhost/admin/settings/settings.global/list"
              >
                <FormattedMessage
                  id="proposal.admin.general"
                  values={Object {}}
                />
              </a>,
            }
          }
        />
      </p>
    </Col>
  </div>
  <div
    className="row"
    style={
      Object {
        "padding": "10px 0",
      }
    }
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={1}
    >
      <Toggle
        checked={false}
        disabled={true}
        icons={true}
        onChange={[Function]}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      xs={11}
    >
      <FormattedMessage
        id="i-am-not-a-bot"
        values={Object {}}
      />
    </Col>
  </div>
  <h3>
    <FormattedMessage
      id="communication"
      values={Object {}}
    />
  </h3>
  <Connect(ReduxForm) />
</div>
`;
